Small CSS Changes:  - Updated main color to green instead of orange  - Added hover animation on desktop  - Fixed layout on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,16 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+.hover-shadow {
+  transition: box-shadow .3s, transform .3s;
+  border-radius: 2rem;
+}
+.hover-shadow:hover {
+  box-shadow: .3rem .3rem 0 rgba(0, 0, 0, .2);
+  transform: translateX(-.3rem) translateY(-.3rem);
+}
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -33,16 +43,24 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #bd5d38;
-  --bs-secondary: #6c757d;
+  /*--bs-primary: #bd5d38;*/
+  /*--bs-secondary: #6c757d;*/
+  /*--bs-primary: #FF8360;*/
+  /*--bs-secondary: #4A6C6F;*/
+  --bs-primary: #648767;
+  --bs-secondary: #D7816A;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 189, 93, 56;
-  --bs-secondary-rgb: 108, 117, 125;
+  /*--bs-primary-rgb: 189, 93, 56;*/
+  /*--bs-secondary-rgb: 108, 117, 125;*/
+  /*--bs-primary-rgb: 255, 131, 96;*/
+  /*--bs-secondary-rgb: 74, 108, 111;*/
+  --bs-primary-rgb: 100, 135, 103;
+  --bs-secondary-rgb: 215, 129, 106;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -237,11 +255,15 @@ sup {
 }
 
 a {
-  color: #bd5d38;
+  /*color: #bd5d38;*/
+  /*color: #FF8360;*/
+  color: #648767;
   text-decoration: underline;
 }
 a:hover {
-  color: #974a2d;
+  /*color: #974a2d;*/
+  /*color: #4A6C6F;*/
+  color: #577559;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
